--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,4 +3,88 @@
 {% block start %}
 {% include 'navbar.html' %}
 
+<div class="container mb-5">
+        
+    <div class ="row">
+        <div class="col-md-4">
+
+            <div class="card shadow mt-4" style="width: 18rem;">
+                <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?cs=srgb&dl=pexels-pixabay-261102.jpg&fm=jpg" class="card-img-top" alt="CARD">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Classic</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <span class="badge rounded-pill text-bg-primary">Swimming Pool</span>
+                  <span class="badge rounded-pill text-bg-primary">AC</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card shadow mt-4" style="width: 18rem;">
+                <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?cs=srgb&dl=pexels-pixabay-261102.jpg&fm=jpg" class="card-img-top" alt="CARD">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Classic</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <span class="badge rounded-pill text-bg-primary">Swimming Pool</span>
+                  <span class="badge rounded-pill text-bg-primary">AC</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card shadow mt-4" style="width: 18rem;">
+                <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?cs=srgb&dl=pexels-pixabay-261102.jpg&fm=jpg" class="card-img-top" alt="CARD">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Classic</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <span class="badge rounded-pill text-bg-primary">Swimming Pool</span>
+                  <span class="badge rounded-pill text-bg-primary">AC</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card shadow mt-4" style="width: 18rem;">
+                <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?cs=srgb&dl=pexels-pixabay-261102.jpg&fm=jpg" class="card-img-top" alt="CARD">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Classic</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <span class="badge rounded-pill text-bg-primary">Swimming Pool</span>
+                  <span class="badge rounded-pill text-bg-primary">AC</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div class="card shadow mt-4" style="width: 18rem;">
+                <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?cs=srgb&dl=pexels-pixabay-261102.jpg&fm=jpg" class="card-img-top" alt="CARD">
+                <div class="card-body">
+                  <h5 class="card-title">Hotel Classic</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <span class="badge rounded-pill text-bg-primary">Swimming Pool</span>
+                  <span class="badge rounded-pill text-bg-primary">AC</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+
+{% include 'footer.html' %}
+
 {% endblock %}
