--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,24 +1,30 @@
-{% extends 'base.html'%}
+{% extends 'utils/base.html'%}
 
 {% block start %}
+
+
 <div class="container mt-5 mb-5 pb-4 pt-4">
+    
 
     <div class="card col-6 mx-auto shadow" style="padding: 40px; border: none;">
-        <form>
+        
+        <form method="POST">
+            <h3 class="text-center mb-4" style="font-weight: bold;">Log In</h3>
+            {% include 'utils/alert.html' %}
+            {% csrf_token %}
             <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" name ="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
+            
             <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" name = "password" class="form-control" id="exampleInputPassword1">
             </div>
-            <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <label><small>Create an account <a href="{% url 'register' %}">Register</a></small></label>
+            <div class="mb-3">
+                <button type="submit" class="btn btn-primary">Login</button>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
