--- a/accounts/templates/utils/navbar.html
+++ b/accounts/templates/utils/navbar.html
@@ -1,5 +1,5 @@
 {%  load static %}
-<nav class="navbar navbar-dark bg-danger bg-danger shadow-lg" >
+<!-- <nav class="navbar navbar-dark bg-danger bg-danger shadow-lg" >
     <div class="container-fluid">
       <a class="navbar-brand">
         <img src="{% static 'images/logo.jpg' %}" alt="Logo" width="50" height="50" style="margin-left: 10px; padding: 3px;">
@@ -9,4 +9,14 @@
         <button class="btn btn-success btn-outline-success" style="color:white" type="submit">Search</button>
       </form>
     </div>
-  </nav>
+  </nav> -->
+
+<nav class="navbar navbar-dark bg-danger shadow-lg">
+    <div class="container-fluid">
+        <!-- Logo Section -->
+        <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'images/logo.jpg' %}" alt="Logo" width="50" height="50" style="margin-left: 10px; padding: 3px;">
+        </a>
+
+    </div>
+</nav>
