--- a/accounts/templates/otp_enter.html
+++ b/accounts/templates/otp_enter.html
@@ -13,16 +13,11 @@
             {% include 'utils/alert.html' %}
             {% csrf_token %}
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" name ="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" name = "password" class="form-control" id="exampleInputPassword1">
+                <label for="exampleInputEmail1" class="form-label">OTP</label>
+                <input type="text" name ="otp" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div>
-                <label><small><a href="{% url 'otp-login' %}">Log in with OTP</a></small></label>
+                <label><small><a href="{% url 'login' %}">Log in with password</a></small></label>
             </div>
             <label><small>Create an account <a href="{% url 'register' %}">Register</a></small></label>
             <div class="mb-3">
