--- a/accounts/templates/otp_login.html
+++ b/accounts/templates/otp_login.html
@@ -16,17 +16,12 @@
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" name ="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">OTP</label>
-                <input type="text" name = "otp" class="form-control" id="exampleInputPassword1">
+            <div>
+                <label><small><a href="{% url 'login' %}">Log in with password</a></small></label>
             </div>
             <label><small>Create an account <a href="{% url 'register' %}">Register</a></small></label>
-            <div>
-            <label><small><a href="{% url 'login' %}">Log in with password</a></small></label>
-            </div>
             <div class="mb-3">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Send OTP</button>
             </div>
         </form>
     </div>
