--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -13,8 +13,8 @@
         <div class="col-md-4">
           <h5>Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white text-decoration-none">Home</a></li>
-            <li><a href="#" class="text-white text-decoration-none">Services</a></li>
+            <li><a href="{% url 'vendor-register' %}" class="text-white text-decoration-none">Vendor Registration</a></li>
+            <li><a href="{% url 'vendor-login' %}" class="text-white text-decoration-none">Vendor Login</a></li>
             <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
             <li><a href="#" class="text-white text-decoration-none">Privacy Policy</a></li>
           </ul>
